wip: alfons style
trying premultiplied alpha blending and some sdf tweaks

scale down text line to requested font size

alfons: support multiple texture buffers

- upload only visible labels

save alfons

update alfons to VboMesh

alfons: use new Mesh and LabelSet interfaces

alfons: lock on modifications of m_batches

alfons: use android system fonts

alfons: release unused atlas

alfons: reload textures on context loss

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
             components: [ 'build-tools-21.1.2', 'android-22' ]
 
 before_install:
-    - git submodule init && git submodule update
+    - git submodule update --init --recursive
     - source ./travis/before_install.sh
 
 install: ulimit -c
