--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,9 @@
 [submodule "external/benchmark"]
 	path = external/benchmark
 	url = https://github.com/google/benchmark
+[submodule "external/alfons"]
+	path = external/alfons
+	url = https://github.com/hjanetzek/alfons
+[submodule "external/harfbuzz-icu-freetype"]
+	path = external/harfbuzz-icu-freetype
+	url = https://github.com/tangrams/harfbuzz-icu-freetype
