--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -36,17 +36,17 @@ list(APPEND INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE_DIR}")
 set(CORE_INCLUDE_DIRS ${INCLUDE_DIRS} CACHE INTERNAL "core include directories" FORCE)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR})
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/mapbox)
+list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/sdf)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/stb)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/glm)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/isect2d/include)
-list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/fontstash-es/fontstash)
 list(REMOVE_DUPLICATES INCLUDE_DIRS)
 
 set(CORE_LIBRARIES_INCLUDE_DIRS
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/glm
+    ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/sdf
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/stb
-    ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/fontstash-es/fontstash
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/pbf
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/rapidjson
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/isect2d/include
