--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -136,6 +136,7 @@ endif()
 
 ## alfons ##
 ############
-set(GLM_ROOT ${PROJECT_SOURCE_DIR}/core/include/glm)
+#set(GLM_ROOT ${PROJECT_SOURCE_DIR}/core/include/glm)
+set(GLM_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/core/include/glm)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/alfons)
