No tex coords for polyline buffers when option is on

--- a/core/resources/scene.yaml
+++ b/core/resources/scene.yaml
@@ -54,7 +54,12 @@ styles:
         #    blocks:
         #        color: "color.rgb += vec3(worldPosition().z / 800.);"
         texcoords: false
+    polyline_no_uvs:
+        base: lines
+        lighting: vertex
+        texcoords: false
     heightglowline:
+        texcoords: false
         base: lines
         mix: heightglow
     icons:
@@ -185,6 +190,7 @@ layers:
             filter: { kind: highway }
             draw:
                 lines:
+                    style: polyline_no_uvs
                     color: '#D16768'
                     width: [[14, 2px], [15, 12]]
                     outline:
@@ -193,12 +199,14 @@ layers:
                 filter: { is_link: yes }
                 draw:
                     lines:
+                        style: polyline_no_uvs
                         color: '#aaa'
                         width: [[13, 1px], [14, 12]]
         major_road:
             filter: { kind: major_road, $zoom: { min: 10 } }
             draw:
                 lines:
+                    style: polyline_no_uvs
                     color: '#aaaaa4'
                     width: [[10, 1px], [13, 2px], [14, 2px], [16, 12]]
                     outline:
@@ -207,6 +215,7 @@ layers:
             filter: { kind: minor_road }
             draw:
                 lines:
+                    style: polyline_no_uvs
                     color: '#bbbbb8'
                     width: [[13, 1px], [14, 1px], [15, 8]]
                     outline:
@@ -215,6 +224,7 @@ layers:
             filter: { kind: path }
             draw:
                 lines:
+                    style: polyline_no_uvs
                     color: '#fff'
                     width: [[15, 1px], [17, 2px]]
                     outline:
@@ -233,6 +243,7 @@ layers:
                 filter: { aeroway: runway }
                 draw:
                     lines:
+                        style: polyline_no_uvs
                         color: [[13, '#FFE4B5'], [16, white]]
                         width: [[11, 2.], [12, 3.], [13, 4.], [17, 8.]]
                         order: 39
