Basic setup -- create tree style

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -38,6 +38,7 @@ list(APPEND INCLUDE_DIRS ${INCLUDE_DIR})
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/mapbox)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/sdf)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/stb)
+list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/par)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/glm)
 list(APPEND INCLUDE_DIRS ${INCLUDE_DIR}/isect2d/include)
 list(REMOVE_DUPLICATES INCLUDE_DIRS)
@@ -47,6 +48,7 @@ set(CORE_LIBRARIES_INCLUDE_DIRS
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/glm
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/sdf
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/stb
+    ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/par
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/pbf
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/rapidjson
     ${PROJECT_SOURCE_DIR}/${INCLUDE_DIR}/isect2d/include
